# ate-smt7-diff

./: .gitignore  .mcp.json  .smt7-diff-config.json.example  AGENTS.md  CLAUDE.md  README.md  README_CN.md  mcp_server.py  program_loader.py  pyproject.toml  smt7_flow_diff.py  suite_config.py  test_eqnset_diff.py  test_level_spec.py  test_timing_demo.py
.claude/: mcp.json
.claude/skills/: smt7-diff.md
.codex-plugin/: plugin.json
ate_smt7_diff/: __init__.py  builder.py  cli.py  config_models.py  filesystem.py  flow_matcher.py  models.py
ate_smt7_diff/agent/: __init__.py  discover.py  explain.py  suggest.py  validate.py
ate_smt7_diff/builder/: __init__.py  context.py  extractors.py  resolvers.py  suite_views.py  timing_diff_dispatch.py
ate_smt7_diff/diff/: __init__.py  flow_diff.py  level_diff.py  suite_diff.py  testmethod_diff.py  testtable_diff.py  timing_diff.py  timing_eqnset_diff.py  timing_spec_diff.py  utils.py  vector_diff.py  wavetbl_diff.py
ate_smt7_diff/formatters/: __init__.py  batch_console.py  batch_json.py  batch_markdown.py  console.py  console_level.py  console_suite.py  console_timing.py  json.py  json_level.py  json_suite.py  json_timing.py  markdown.py  markdown_level.py  markdown_suite.py  markdown_timing.py  shared.py
ate_smt7_diff/mcp/: __init__.py  cache.py  install.py  resources.py  runtime.py  serializers.py  server.py
scripts/: ate-smt7-diff-mcp-launcher
tests/: test_eqnset_diff.py  test_filesystem.py  test_level_spec.py  test_timing_diff.py  test_timing_parser.py  test_wavetbl_diff.py  test_wavetbl_parser.py
(+63 files in other folders)
